[package]
name = "timeout_io"
version = "0.3.0"
authors = ["KizzyCode Software Labs./Keziah Biermann <development@kizzycode.de>"]
description = "This library provides a simple timeout-based API for IO-operations"
license = "BSD-2-Clause OR MIT"
repository = "https://github.com/KizzyCode/timeout_io"
readme = "README.md"
build = "build.rs"

[badges]
travis-ci = { repository = "KizzyCode/timeout_io" }
appveyor = { repository = "KizzyCode/timeout_io" }

[dependencies]
etrace = "1.1.1"

[build-dependencies]
cc = "1.0.25"